# regional-mom6

./: ..gitignore.swp  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  Create_Base_Grid.py  LICENSE  Make MOM6 Regional Domain.ipynb  Make MOM6 Regional Domain_025.ipynb  Make MOM6 Regional Domain_025_v2.ipynb  Obc01to025.ipynb  README.md  access_slicing.py  boudary_forcing_properties.txt  boundary.py  boundary_tides.py  brushcut_xesmf_zarr.py  build_from_reanalysis.ipynb  codecov.yml  demo.ipynb  demo_IAF-DRAFT copy.ipynb  demo_IAF-DRAFT.ipynb  demo_interactive.ipynb  environment-ci.yml  era forcing.ipynb  gen_seg.sh  gen_segments.py  htcflood.py  interp_initial.py  legacy_README.md  localrun.ipynb  mpi_topog  newdemo.ipynb  prepare_segments.py  pyproject.toml  regional_library.py  regional_model_scripts.py  regrid_runoff.py  setup.py  sharkbay-Copy1.ipynb  (+8 more)
.github/workflows/: CI.yml  draft-pdf.yml  package.yml  testing.yml  tests.yml
.ipynb_checkpoints/: regional_model_scripts-checkpoint.py  regrid_runoff-checkpoint.py
default_rundir/era5_surface/: data_table
demos/: ACCESS-rOM3-demo.ipynb  BYO-domain.ipynb  Res_Bay.ipynb  access_om2-forced.ipynb  machine-agnostic-demo.ipynb  model-forced.ipynb  reanalysis-forced.ipynb  setup-ACCESS-rOM3.ipynb  using-mom6bathy.ipynb  using-mom6forge.ipynb
demos/premade_run_directories/: README.md  readme_premade_rundirs.md
docs/: angle_calc.md  angle_calculation.md  api.rst  conf.py  contributing.md  demos.rst  docker_image_dev.md  file-structure.md  index.rst  installation.md  mom6-file-structure-primer.md  regional-mom6-workflow.md  requirements.txt
mom6_regional/: __init__.py  mom6_regional.py  regional_model_scripts.py
original_scripts/: brushcut_xesmf_zarr.py  prepare_segments.py
paper/: nested-regional-mom6.ipynb  paper.bib  paper.md
regional_mom6/: MOM_parameter_tools.py  __init__.py  config.py  regional_mom6.py  regridding.py  rm6_unit_defs.txt  rotation.py  utils.py  validate.py
test/: conftest.py
tests/: conftest.py  test_angled_grids.py  test_arakawa_grid_mapping.py  test_config.py  test_config_class.py  test_expt_class.py  test_grid_generation.py  test_identify_arakawa_grid.py  test_manish_branch.py  test_parameter.py  test_pr_12.py  test_regridding.py  test_rotation.py  test_tides.py  test_tides_and_parameter.py  test_tides_functions_config.py  test_trivial.py  test_utils.py  test_validate.py
(+23 files in other folders)
