[project]
name = "regional_mom6"
description = "Automatic generation of regional configurations for Modular Ocean Model 6"
keywords = ["mom6", "regional", "ocean modeling"]
authors = [
  {name = "Ashley Barnes, COSIMA community, and contributors"},
]
dynamic = ["version"]
dependencies = [
  "dask[array]",
  "dask[distributed]",
  "numpy>=1.17.0",
  "scipy>=1.2.0",
  "netCDF4",
  "xarray",
  "xesmf",
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["regional_mom6"]

[tool.setuptools_scm]
write_to = "regional_mom6/_version.py"
